Refs #4. Fixed issue with half blank screen when the keyboard is missing and help is showing. Added missing border for the password field

--- a/src/styles/scss/auth.scss
+++ b/src/styles/scss/auth.scss
@@ -5,6 +5,10 @@
         width: 60px;
     }
 
+    .list:last-child {
+        margin-bottom: 20px;
+    }
+
     .item-floating-label {
         padding-left: 0;
     }
